--- a/Library_5200/src/main/resources/application.properties
+++ b/Library_5200/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://cs5200-spring2020-tilles.crxopeq265pj.us-east-2.rds.amazonaws.com/library?useSSL=false
 spring.datasource.username=alicetilles
 spring.datasource.password=tillesalice
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
