refactored/improved performance of some queries by replacing with JPQL

--- a/Library_5200/src/main/resources/application.properties
+++ b/Library_5200/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://cs5200-spring2020-tilles.crxopeq265pj.us-east-2.rds.amazonaws.com/library?useSSL=false
+spring.datasource.url=jdbc:mysql://cs5200-spring2020-tilles.crxopeq265pj.us-east-2.rds.amazonaws.com/librarytest?useSSL=false
 spring.datasource.username=alicetilles
 spring.datasource.password=tillesalice
 spring.jpa.hibernate.ddl-auto=update
